# unit-dmkit

./: .gitignore  CMakeLists.txt  Dockerfile  NOTICE  README.md  deps.sh
conf/: gflags.conf
conf/app/: bot_tokens.json  products.json  remote_services.json
conf/app/demo/: book_hotel.json  book_hotel.xml  cellular_data.json  cellular_data.xml  quota_adjust.json  quota_adjust.xml
docs/: demo_book_hotel_pattern.txt  demo_bots.md  demo_cellular_data_pattern.txt  demo_quota_adjust_pattern.txt  demo_skills.md  faq.md  tutorial.md  visual_tool.md
language_compiler/: compiler_xml.py  run.py  settings.cfg
proto/: http.proto
src/: app_container.cpp  app_container.h  app_log.h  application_base.h  brpc.h  butil.h  dialog_manager.cpp  dialog_manager.h  file_watcher.cpp  file_watcher.h  policy.cpp  policy.h  policy_manager.cpp  policy_manager.h  qu_result.cpp  qu_result.h  rapidjson.h  remote_service_manager.cpp  remote_service_manager.h  request_context.cpp  request_context.h  server.cpp  thread_data_base.h  token_manager.cpp  token_manager.h  user_function_manager.cpp  user_function_manager.h  utils.h
src/user_function/: demo.cpp  demo.h  shared.cpp  shared.h
tools/: bot_emulator.py  mock_api_server.py
